# canoe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: developer_guide.md  requirements.md  user_guide.md  user_manual.md
docs/design/: phase1_design.md  phase2_design.md  phase5_design.md
src/: __init__.py  __main__.py  main.py
src/config/: settings_manager.py
src/converter/: batch_converter.py  openai_converter.py
src/engine/: canoe_com.py  judgment.py  log_manager.py  test_runner.py
src/gui/: error_messages.py  execution_tab.py  keyboard_shortcuts.py  main_window.py  pattern_tab.py  report_tab.py  result_tab.py  signal_selector.py  signal_tab.py
src/models/: __init__.py  signal_model.py  test_pattern.py
src/parsers/: dbc_parser.py  ldf_parser.py
src/report/: excel_report.py
tests/: conftest.py  test_dbc_parser.py  test_gui.py
tests/e2e/: __init__.py  conftest.py  test_conversion_flow.py  test_error_recovery.py  test_execution_flow.py  test_full_pipeline.py
tests/fixtures/: sample.dbc  sample.ldf
tests/fixtures/e2e/: confirmed_params.json  expected_report.json  expected_results.json  mock_canoe_responses.json  test_patterns.json
tests/fixtures/error/: corrupted.dbc  invalid_pattern.json
tests/integration/: test_e2e_basic.py  test_e2e_scenario.py  test_parsers_integration.py
tests/unit/: test_batch_converter.py  test_canoe_com.py  test_excel_report.py  test_execution_tab.py  test_judgment.py  test_ldf_parser.py  test_log_manager.py  test_openai_converter.py  test_pattern_tab.py  test_report_tab.py  test_result_tab.py  test_settings_manager.py  test_signal_model.py  test_signal_selector.py  test_signal_tab.py  test_test_pattern.py  test_test_runner.py  test_ui_improvements.py
